# DecoDiPhy

./: .gitignore  DecoDiPhy.py  DecoDiPhy_tutorial.ipynb  LICENSE  README.md  commands.sh  compute_metrics.py  draw_10k.R  draw_biotrees.R  find_sol.py  generate_krepp_input.py  pyproject.toml  run_deconvolve.py  test.py
Example/: all_rounds.json  all_rounds_1.json  krepp_assignments.txt  krepp_distances.txt  output.jplace  pruned_tree.trees  reference_tree.trees
Example/output/: all_rounds.json  labeled_tree.trees  output.jplace
MISC/: combine_16k_placements.py  compute_16k_distances.py  compute_metrics.py  compute_metrics_woltka.py  compute_runtime.py  draw_placements.R  find_sol_10k.py  read_jplace.py  simulate_exp.py
Rplots/: 16k_data_real.R  draw.R  draw_10k.R  draw_16k_sim.R  draw_16k_sim_plots.R  draw_biotrees.R
decodiphy/: cli.py  compute_distances.py  core.py  jutil.py  matrix.py  neighbors.py  optimize.py  output.py  read_jplace.py  search.py  tree_utils.py
